[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/transformableUI/TransformBlock_Modifiable.gd" type="Script" id=1]
[ext_resource path="res://GUI/transformableUI/numberInput.tscn" type="PackedScene" id=2]

[node name="TranslateBlock" type="ColorRect"]
anchor_right = 0.187
anchor_bottom = 0.104
margin_right = -32.4
margin_bottom = 0.119995
rect_min_size = Vector2( 225, 75 )
size_flags_horizontal = 6
size_flags_vertical = 0
color = Color( 0.333333, 0.847059, 0.933333, 1 )
script = ExtResource( 1 )

[node name="Padding" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = -30.5
margin_right = 91.0
margin_bottom = 30.5

[node name="vDisplayContainer" type="VBoxContainer" parent="Padding"]
margin_right = 182.0
margin_bottom = 61.0

[node name="blockName" type="Label" parent="Padding/vDisplayContainer"]
margin_left = 73.0
margin_right = 108.0
margin_bottom = 14.0
size_flags_horizontal = 6
size_flags_vertical = 2
text = "Block"
align = 1

[node name="hInputContainer" type="HBoxContainer" parent="Padding/vDisplayContainer"]
margin_top = 37.0
margin_right = 182.0
margin_bottom = 61.0

[node name="xInput" parent="Padding/vDisplayContainer/hInputContainer" instance=ExtResource( 2 )]
size_flags_horizontal = 2
size_flags_vertical = 6
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0.188235, 0, 1 )
placeholder_alpha = 1.0

[node name="yInput" parent="Padding/vDisplayContainer/hInputContainer" instance=ExtResource( 2 )]
margin_left = 62.0
margin_right = 120.0
size_flags_horizontal = 6
size_flags_vertical = 2
custom_colors/font_color = Color( 0.176471, 1, 0.517647, 1 )

[node name="zInput" parent="Padding/vDisplayContainer/hInputContainer" instance=ExtResource( 2 )]
margin_left = 124.0
margin_right = 182.0
size_flags_horizontal = 10
custom_colors/font_color = Color( 0, 0.905882, 1, 1 )

[node name="deleteSelfButton" type="Button" parent="."]
anchor_right = 0.996
anchor_bottom = 0.96
margin_left = 200.0
margin_right = -0.100006
margin_bottom = -48.0
text = "X"
icon_align = 1

[connection signal="input_Updated" from="Padding/vDisplayContainer/hInputContainer/xInput" to="." method="_on_xInput_input_Updated"]
[connection signal="input_Updated" from="Padding/vDisplayContainer/hInputContainer/yInput" to="." method="_on_yInput_input_Updated"]
[connection signal="input_Updated" from="Padding/vDisplayContainer/hInputContainer/zInput" to="." method="_on_zInput_input_Updated"]
[connection signal="pressed" from="deleteSelfButton" to="." method="_on_deleteSelfButton_pressed"]
